# time-machine-inspector

./: CHANGELOG.md  README.md  bindings.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: release.yml  test.yml
assets/: Logo.afdesign
src/: App.svelte  Item.svelte  Page.svelte  PageItem.svelte  Sidebar.svelte  SidebarItems.svelte  general.ts  index.html  main.ts  page.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  compare.rs  destinationinfo.rs  dir_map.rs  listbackups.rs  main.rs
src/lib/: Button.svelte  ProgressBar.svelte
src/page/: Page.svelte  PageItems.svelte  page.ts
src/sidebar/: Sidebar.svelte  SidebarItems.svelte
