[package]
name = "time-machine-inspector"
version = "1.1.4"
description = "A Tauri App"
default-run = "time-machine-inspector"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["dialog-message", "macos-private-api", "shell-open"] }
window-vibrancy = "0.1"
plist = { version = "1.3", features = ["serde"] }
open = "3.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
