[package]
name = "time-machine-inspector"
version = "1.2.0"
description = "A Tauri App"
default-run = "time-machine-inspector"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0.121"
serde = { version = "1.0.204", features = ["derive"] }
tauri = { version = "1.7.1", features = [
	"devtools",
	"dialog-message",
	"macos-private-api",
	"shell-open",
] }
plist = { version = "1.7", features = ["serde"] }
open = "5.3.0"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
specta = "1.0.5"
regex = "1.10.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
